# openair5g-cn-1

./: config  paste
scripts/: build_esm  run_esm
src/: tags
src/common/: '  guti_messages_def.h  guti_messages_types.h  messages_def.h  messages_types.h
src/common/mem2str2mem/: mem2str2mem.c
src/common/nghttp2/: .libevent-client-mdfy.c.swp  libevent-server-mdfy.h.old  libeventCS.h
src/gtpv2-c/nwgtpv2c-0.11/src/: .NwGtpv2c.c.swp  NwGtpv2c.c
src/mme_app/: mme_app_main.c
src/nas/: .nas_mme_task.c.swp  nas_itti_messaging.c  nas_mme_task.c
src/nas/api/mme/: mme_api.h
src/nas/emm/: emmData.h  emm_data_ctx.c  emm_main.c
src/nas/emm/sap/: .emm_cn.c.swp  emm_cn.c
src/nas/esm/: PdnConnectivity.c  PdnDisconnect.c  esm_data.h  esm_ebr_context.c  esm_information.c
src/nas/esm/sap/: .esm_recv.c.swp  esm_recv.c  esm_sap.c
src/oai_esm/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  esm
src/oai_esm/hashtable/: hashAPI.c  hashAPI.h
src/oai_esm/mem2str2mem/: .mem2str2mem.c.swp  mem2str2mem.c  mem2str2mem.h
src/oai_esm/nghttp2/: .libevent-server-mdfy.c.swp  .libevent-server-mdfy.h.swp  .libeventCS.h.swp  libevent-client-mdfy.c  libevent-client-mdfy.h.old  libevent-server-mdfy.c  libevent-server-mdfy.h.old  libeventCS.h.notuse
src/oai_esm/oaiHeader/: emmData.h  esm_data.h  esm_data_context.c  esm_ebr_context.c  esm_messages_types.h  esm_proc.h  mme_config.c  s11_messages_types.h  sctp_primitives_server.h  shared_ts_log.c  tasks_def.h
src/oai_esm/runEsm/: esmMain.c
src/oai_esm/test/: .Client.c.swp  Client.c
src/s11/: .s11_sgw.c.swp  s11_mme_task.c  s11_sgw.c
src/sgw/: sgw_handlers.c  sgw_task.c
src/udp/: .udp_primitives_server.c.swp  udp_primitives_server.c
src/utils/hashtable/: hashtable.h
